# HarnessX

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README_zh.md  SECURITY.md  aegis_story.md  index.html  pyproject.toml
.github/: CODEOWNERS  (+1 more)
docs/: ROADMAP.md  (+2 more)
gateway/: README.md  __init__.py  main.py  pyproject.toml  server.py
gateway/channels/: __init__.py
gateway/channels/dingtalk/: channel.py  formatter.py  utils.py
gateway/channels/discord_/: channel.py  formatter.py  utils.py
gateway/channels/feishu/: channel.py  constants.py  formatter.py  utils.py
gateway/channels/slack/: channel.py  formatter.py  utils.py
gateway/channels/telegram/: channel.py  formatter.py  utils.py
gateway/console/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
gateway/console/src/: App.tsx  globals.css
gateway/console/src/api/: client.ts  types.ts
gateway/console/src/components/: GwWorkspaceSection.tsx  HarnessReadonlySection.tsx
gateway/console/src/i18n/: index.ts
gateway/console/src/pages/: ChannelsPage.tsx  ChatPage.tsx  CronPage.tsx  DocsPage.tsx  SessionsPage.tsx  SettingsPage.tsx
gateway/core/: auth.py  base_channel.py  config.py  cron.py  dispatch.py  im_cron.py  im_send_file.py  im_stream.py  model_caps.py  session_store.py
gateway/core/processors/: im_secret_redact.py  im_system.py  im_tool_guard.py  im_user_context.py
gateway/core/prompt_templates/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  PROFILE.md  SOUL.md  USER.md
gateway/core/prompt_templates/subagents/: AGENTS.md
(+502 files in other folders)
