[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "harnessx-gateway"
version = "0.1.0"
description = "HarnessX IM Gateway — persistent multi-channel IM service"
requires-python = ">=3.11"
dependencies = [
    "harnessx",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "cachetools>=5.3",
    "croniter>=2.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
feishu = ["lark-oapi>=1.3.0"]
telegram = ["python-telegram-bot>=21.0"]
slack = ["slack-bolt>=1.20", "slack-sdk>=3.27"]
discord = ["discord.py>=2.4"]
dingtalk = ["dingtalk-stream>=0.20", "alibabacloud-dingtalk>=2.0"]
all = [
    "lark-oapi>=1.3.0",
    "python-telegram-bot>=21.0",
    "slack-bolt>=1.20",
    "slack-sdk>=3.27",
    "discord.py>=2.4",
    "dingtalk-stream>=0.20",
    "alibabacloud-dingtalk>=2.0",
]

[project.scripts]
hx-gateway       = "gateway.main:main"
harnessx-gateway = "gateway.main:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["gateway*"]
